# stencil

./: .gitignore  Cargo.toml  README.md  examples.ipynb
.circleci/: config.yml
examples/: heat.rs  kdv.rs
src/: array.rs  impl_util.rs  lib.rs  pad_torus.rs  padding.rs  region.rs  stencil.rs  torus.rs
tests/: region.rs  torus.rs
