[package]
name = "stencil"
version = "0.2.1-alpha.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]

description   = "Stencil Calculation"
documentation = "https://docs.rs/stencil/"
repository    = "https://github.com/termoshtt/stencil"
keywords      = ["ndarray", "pde"]
categories    = ["algorithms", "science"]
license       = "MIT"
readme        = "README.md"

[dependencies]
ndarray = "0.11"
num-traits = "0.2"

[dev-dependencies]
ndarray-linalg = { version = "0.9", features = ["intel-mkl"] }
